# Ahluwalia-Growth-OS-DEMO-

./: .gitignore  01-BRD.md  03-Data-Dictionary.md  04-Business-Workflows.md  05-State-Transition-Specification.md  06-PRD.md  07-User-Roles-Permissions.md  08-Database-Design.md  09-System-Architecture.md  10-API-Specification.md  11-UI-Screen-Specification.md  12-Audit-Logging-Specification.md  13-Master-Search-Specification.md  14-Dashboard-Metrics-Specification.md  15-Engineering-Standards.md  16-AI-Implementation-Guide.md  17-Definition-of-Done.md  DEPLOY.md  README.md  render.yaml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: permissions.py
backend/app/models/: __init__.py  architect.py  assignment.py  attendance.py  audit.py  base.py  builder.py  contact.py  dashboard.py  lifecycle.py  meeting.py  notification.py  opportunity.py  ownership.py  showroom_visit.py  site.py  site_media.py  training.py  user.py
backend/app/repositories/: assignment.py  attendance.py  audit.py  base.py  contact.py  meeting.py  opportunity.py  showroom_visit.py  site.py  user.py
backend/app/schemas/: assignment.py  attendance.py  audit.py  common.py  contact.py  dashboard.py  meeting.py  opportunity.py  search.py  showroom_visit.py  site.py  user.py
backend/scripts/: add_perf_indexes.py  enrich_demo_data.py  migrate_field_intelligence.py  migrate_meeting_pdf.py  migrate_pdf_fields.py  seed_db.py  update_demo_users.py
(+86 files in other folders)
